--- a/README.textile
+++ b/README.textile
@@ -1,3 +1,5 @@
 h1. batchzip
 
-A small shell script tht zips files with same basename (ignoring the extension).
+Short shell script, which zips files with same basename (ignoring the extension).
+
+Can e.g. zip project.txt, project.docx, project.psd, project.xfc, project.png, project.pdf in directory to a sinlge zip file.
