--- a/README.textile
+++ b/README.textile
@@ -2,6 +2,17 @@ h1. batchzip
 
 Short shell script, which zips files with same basename (ignoring the extension).
 
-Can e.g. zip project.txt, project.docx, project.psd, project.xfc, project.png, project.pdf in directory to a sinlge zip file.
+It can zip multi project files with the same name as f.i. project.txt, project.docx, project.psd, project.xfc, project.png, project.pdf in a directory to a sinlge zip file.
+
+h2. Help
 
 For available options and help use -h flag.
+
+h2. License
+
+This script is released under the GNU General Public License Version 2 and above
+
+Grab your copy:
+
+* Version 2: "http://www.gnu.org/licenses/gpl-2.0.html":http://www.gnu.org/licenses/gpl-2.0.html
+* Version 3: "http://www.gnu.org/licenses/gpl-3.0.html":http://www.gnu.org/licenses/gpl-3.0.html
